--- a/tD2_txt.bib
+++ b/tD2_txt.bib
@@ -1,18 +1,31 @@
 @inproceedings{WWMA10,
- author = {Wang, Ye and Wang, Hao and Mahimkar, Ajay and Alimi, Richard and Zhang, Yin and Qiu, Lili and Yang, Yang Richard},
- title = {R3: resilient routing reconfiguration},
- booktitle = {Proceedings of the ACM SIGCOMM 2010 conference on SIGCOMM},
- series = {SIGCOMM '10},
- year = {2010},
- isbn = {978-1-4503-0201-2},
- location = {New Delhi, India},
- pages = {291--302},
- numpages = {12},
- url = {http://doi.acm.org/10.1145/1851182.1851218},
- doi = {http://doi.acm.org/10.1145/1851182.1851218},
- acmid = {1851218},
- publisher = {ACM},
- address = {New York, NY, USA},
- keywords = {network resiliency, routing, routing protection},
+  author = {Wang, Ye and Wang, Hao and Mahimkar, Ajay and Alimi, Richard and Zhang, Yin and Qiu, Lili and Yang, Yang Richard},
+  title = {R3: resilient routing reconfiguration},
+  booktitle = {Proceedings of the ACM SIGCOMM 2010 conference on SIGCOMM},
+  series = {SIGCOMM '10},
+  year = {2010},
+  isbn = {978-1-4503-0201-2},
+  location = {New Delhi, India},
+  pages = {291--302},
+  numpages = {12},
+  url = {http://doi.acm.org/10.1145/1851182.1851218},
+  doi = {http://doi.acm.org/10.1145/1851182.1851218},
+  acmid = {1851218},
+  publisher = {ACM},
+  address = {New York, NY, USA},
+  keywords = {network resiliency, routing, routing protection},
+}
+
+@misc{RFC3031,
+  author="E. Rosen and A. Viswanathan and R. Callon",
+  title="{Multiprotocol Label Switching Architecture}",
+  series="Request for Comments",
+  number="3031",
+  howpublished="RFC 3031 (Proposed Standard)",
+  publisher="IETF",
+  organization="Internet Engineering Task Force",
+  year=2001,
+  month=jan,
+    url="http://www.ietf.org/rfc/rfc3031.txt",
 }
 
