Erklärung FRR angefangen

--- a/tD2_txt.bib
+++ b/tD2_txt.bib
@@ -16,6 +16,33 @@
   keywords = {network resiliency, routing, routing protection},
 }
 
+@misc{RFC1142,
+  author="D. Oran",
+  title="{OSI IS-IS Intra-domain Routing Protocol}",
+  series="Request for Comments",
+  number="1142",
+  howpublished="RFC 1142 (Informational)",
+  publisher="IETF",
+  organization="Internet Engineering Task Force",
+  year=1990,
+  month=feb,
+    url="http://www.ietf.org/rfc/rfc1142.txt",
+}
+
+@misc{RFC2328,
+  author="J. Moy",
+  title="{OSPF Version 2}",
+  series="Request for Comments",
+  number="2328",
+  howpublished="RFC 2328 (Standard)",
+  publisher="IETF",
+  organization="Internet Engineering Task Force",
+  year=1998,
+  month=apr,
+    note="Updated by RFC 5709",
+  url="http://www.ietf.org/rfc/rfc2328.txt",
+}
+
 @misc{RFC3031,
   author="E. Rosen and A. Viswanathan and R. Callon",
   title="{Multiprotocol Label Switching Architecture}",
@@ -28,4 +55,19 @@
   month=jan,
     url="http://www.ietf.org/rfc/rfc3031.txt",
 }
+
+@misc{RFC5714,
+  author="M. Shand and S. Bryant",
+  title="{IP Fast Reroute Framework}",
+  series="Request for Comments",
+  number="5714",
+  howpublished="RFC 5714 (Informational)",
+  publisher="IETF",
+  organization="Internet Engineering Task Force",
+  year=2010,
+  month=jan,
+    url="http://www.ietf.org/rfc/rfc5714.txt",
+}
+
+
 
