bitex Eintrag für RFC4090 hinzugefügt

--- a/tD2_txt.bib
+++ b/tD2_txt.bib
@@ -56,6 +56,19 @@
     url="http://www.ietf.org/rfc/rfc3031.txt",
 }
 
+@misc{RFC4090,
+  author="P. Pan and G. Swallow and A. Atlas",
+  title="{Fast Reroute Extensions to RSVP-TE for LSP Tunnels}",
+  series="Request for Comments",
+  number="4090",
+  howpublished="RFC 4090 (Proposed Standard)",
+  publisher="IETF",
+  organization="Internet Engineering Task Force",
+  year=2005,
+  month=may,
+    url="http://www.ietf.org/rfc/rfc4090.txt",
+}
+
 @misc{RFC5714,
   author="M. Shand and S. Bryant",
   title="{IP Fast Reroute Framework}",
