Routing in Flussdarstellung

--- a/tD2_txt.bib
+++ b/tD2_txt.bib
@@ -16,6 +16,24 @@
   keywords = {network resiliency, routing, routing protection},
 }
 
+@inproceedings{ApCo03,
+ author = {Applegate, David and Cohen, Edith},
+ title = {Making intra-domain routing robust to changing and uncertain traffic demands: understanding fundamental tradeoffs},
+ booktitle = {Proceedings of the 2003 conference on Applications, technologies, architectures, and protocols for computer communications},
+ series = {SIGCOMM '03},
+ year = {2003},
+ isbn = {1-58113-735-4},
+ location = {Karlsruhe, Germany},
+ pages = {313--324},
+ numpages = {12},
+ url = {http://doi.acm.org/10.1145/863955.863991},
+ doi = {http://doi.acm.org/10.1145/863955.863991},
+ acmid = {863991},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {TM estimation, demand-oblivious routing, routing},
+}
+
 @misc{RFC1142,
   author="D. Oran",
   title="{OSI IS-IS Intra-domain Routing Protocol}",
