--- a/tD2_txt.tex
+++ b/tD2_txt.tex
@@ -105,30 +105,52 @@ Hierzu gibt es eine Reihe von Routing-Protokollen
 wie beispielsweise die im Internet eingesetzten Protokolle 
 Open Shortest Path First (OSPF) \cite{RFC2328} oder Intermediate System - Intermediate System (IS-IS) \cite{RFC1142}. 
 
+%TODO Worin besteht das Problem?
 %TODO Überleitung zu Network Resiliency
 
 
 \section{Grundlagen}
 \label{tD2_Grundlagen}
 %TODO Network resiliency
-%TODO Deutscher Begriff für "Network Resiliency"
+%TODO Deutscher Begriff für "Network Resiliency" suchen
 In \cite{WWMA10} wird 'Network resiliency' als die Fähigkeit eines Computernetzes definiert, 
 sich schnell und problemlos von einer Reihen von Fehlern oder Unterbrechungen zu erholen. 
 Eine zunehmend wichtiger werdende Eigenschaft für moderne IP-basierte Netze.
 
-%TODO Routing (nun detailierter)
-%TODO flow-based routing representation
+
+%TODO Definition Verkehrsmatrix
 Mit Routing wird die Auswahl eines Weges (Route) durch ein Netzwerk bezeichnet, 
 der bestimmt über welche Netzknoten eine Dateneinheit von der Quelle (Orgin) bis zum Ziel (Destination) übertragen wird.
 Häufig ist eine Route nicht eindeutig, sondner es gibt mehrer Routen für das gleiche Quell/Ziel-Paar. 
 Dabei kann für die Datenübertragung nicht nur ein Pfad sondern auch mehrere unterschiedliche Pfade gleichzeitig genutzt werden. 
 Jeder Pfad überträgt dann einen gewissen Anteil der zu übermittelnden Informationen.
-So gesehen kann Routing auch wie in \cite{ApCo03} beschrieben als Fluss aufgefasst und dargestellt werden. 
-Sei dazu $r$ ein Routing und der Graph $G=(V,E)$ das zu betrachtende Netzwerk, 
-wobei $V$ der Menge der Router und $E$ der Menge der Verbindunge zwischen den Routern entspricht.
-Ein Routing wird dann durch eine Menge $\{r_{ab}(e)|a,b \in V \land e \in E\}$ von Werten $r_{ab}(e)$ definiert, 
-die angeben welcher Anbteil am Datenvolumen das von $a$ nach $b$ übertragen soll von der Verbindung $e$ getragen wird.
- 
+
+Fasst man ein IP-Netzwerk als gerichteten Graph $G=(V,E)$ auf, 
+wobei $V$ der Menge der Router und $E$ der Menge der Netzwerkverbindungen zwischen den Routern entspircht, 
+lässt sich eine Routing $r$ auch als Fluss auffassen \cite{ApCo03}. 
+Die Werte $r_{ab}(e)$ geben dazu jeweils den Anteil einer Übertragung von $a \in V$ nach $b \in V$ an, 
+der über die Verbindung $e \in E$ geroutet wird.
+Als Menge $\{r_{ab}(e)|a,b \in V \land e \in E\}$ zusammengefasst beschreiben diese Werte so das gesammte Routing $r$.
+Der Beitrag zur Auslastung einer Verbindung $e$ entspricht dem Produkt $d_{ab}r_{ab}(e)$, 
+wobei $d_{ab}$ dem aktuell von Sender $a$ initiierte Verkehr zum Empfänger $b$ entpsicht und $r_{ab}(e)$ der wie oben beschriebene Anteil.
+
+Ein so definiertes Routing gilt als korrekt wenn es die in \cite{WWMA10} beschiebenen Bedingungen erfüllt. 
+Nachfolgend sollen diese nocheinmal aufgeführt werden:
+
+Eine Menge $\{r_{ab}(e)\}$ ist ein korrektes Routing, wenn gilt:
+\begin{eqnarray}
+\forall i \neq a,b: \sum_{(i,j) \in E} r_{ab}(i,j) = \sum_{(j,i) \in E} r_ab(j,i)\\ 
+\sum_{(a,i) \in E} r_{ab}(a,i) = 1\\
+\forall(i,a) \in E : r_{ab}(i,a) = 0\\
+\forall e \in E : 0 \le r_{ab}(e) \le 1
+\end{eqnarray}
+
+Die erste Bedingung entspricht dem für Flussnetzwerke üblichen Flusserhalt und fordert, 
+dass jeder Zwischenknoten genausoviel weiterleitet wie in ihn hineinfließt.
+Die zweite Bedingun forde, dass der gesamte von einer Quelle initierte Verkehr weitergeleitet wird,
+während die dritte Bedimng verbeitet ein Teil davon wieder zur Quelle zurückgeleitet wird.
+Die vierte Bedinung fordert das der weitergeleitete Anteil zwischen $0\%$ und $100\%$ liegt.
+
 
 %TODO MPLS - Ausführlicher?
 Multiprotokol Label Switching (MPLS) \cite{RFC3031} ist ein Verfahren, 
@@ -139,6 +161,7 @@ die den Pfad (Lable Switch Path - LSP) durch das Netz bestimmt.
 Dazu wird ihr ein kurze Kennung fester Länge, ein sog. Label zugeordnet. 
 Die nachfolgenden Knoten können daraus anhand einer Tabelle (Incoming Lable Mapping - ILM), den nächsten Knoten bestimmen. 
 Eine Auswertung des kompletten Paketkopfes ist nicht mehr notwendig.
+
 
 %TODO Fast rerouting (FRR) - Ausführlicher?
 Ein häufig genutztes Verfahren um auf Netzwerkfehler wie beispielweise der Ausfall einer Verbindung 
@@ -161,13 +184,9 @@ Eine Information der anderen Router im Netz ist nicht zwingen erforderlich.
 Für MPLS gibt es eine ähnlich arbeitenden Variante die in \cite{RFC4090} beschrieben wird.
 
 
-%TODO Notationen
-
 %TODO Verwandte Arbeiten
 Im Gegensatz zu \cite{WWMA10}, der Grundlage dieser Seminararbeit, 
 behandeln bissherige Arbeiten entweder Routing im Fehlerfall oder Routing für variable Netzauslastungen.
-
-
 
 \section{Resilient Routing Reconfiguration}
 
@@ -188,11 +207,15 @@ Auf dieser Grundlage wird ein Protection-Routing $p$ berechnet,
 
 \subsection{Erweiterungen}
 %TODO Überschrifften besser formulieren
-\subsubsection{Behandlung von unterschiedlichem Verkehrsaufkommen}
-\subsubsection{Behandlung von realisitschen Fehlerszenarien}
-\subsubsection{Behanldung von Priorisiertem Verkehr}
-\subsubsection{Abwägung zwischne Performance unter normalen Bedinngungen und im Fehlerfall}
-\subsubsection{Abwägung zwischne Netzauslastung und Verzögerungszeiten} 
+\textbf{Behandlung von unterschiedlichem Verkehrsaufkommen}
+
+\textbf{Behandlung von realisitschen Fehlerszenarien}
+
+\textbf{Behanldung von Priorisiertem Verkehr}
+
+\textbf{Abwägung zwischne Performance unter normalen Bedinngungen und im Fehlerfall}
+
+\textbf{Abwägung zwischne Netzauslastung und Verzögerungszeiten} 
 
 \section{Implementierung}
 %Wie scheibt man das?
