--- a/tD2_txt.bib
+++ b/tD2_txt.bib
@@ -34,6 +34,21 @@
  keywords = {TM estimation, demand-oblivious routing, routing},
 }
 
+@inproceedings{KYGS05,
+ author = {Kompella, Ramana Rao and Yates, Jennifer and Greenberg, Albert and Snoeren, Alex C.},
+ title = {IP fault localization via risk modeling},
+ booktitle = {Proceedings of the 2nd conference on Symposium on Networked Systems Design \& Implementation - Volume 2},
+ series = {NSDI'05},
+ year = {2005},
+ pages = {57--70},
+ numpages = {14},
+ url = {http://portal.acm.org/citation.cfm?id=1251203.1251208},
+ acmid = {1251208},
+ publisher = {USENIX Association},
+ address = {Berkeley, CA, USA},
+}
+
+
 @misc{RFC1142,
   author="D. Oran",
   title="{OSI IS-IS Intra-domain Routing Protocol}",
