--- a/tD2_txt.tex
+++ b/tD2_txt.tex
@@ -236,17 +236,39 @@ Auf dieser Grundlage wird ein Protection-Routing $p$ berechnet,
 \textbf{Abwägung zwischne Netzauslastung und Verzögerungszeiten} 
 
 \section{Implementierung}
-%Wie scheibt man das?
-%Die haben das so implementiert? oder Das kann man so implementieren
-%Ist die Implementierung überhaupt wichtig
-
 Die Grundlage von R3 bildet eine flussbasierte Darstellung des Routings.
 Da eine solches Routing-Schema von heutigen Routern noch nicht unterstütz wird, 
 müssen für eine Implementierung bestehende Verfahren daraufhin angepasst oder neue implementiert werden.
 Aufgrud dessen dass viele Anbieter für Router MPLS unterstützen 
 und MPLS relative einfach durch MPLS-ff \cite{WWMA10} für flussbasiertes Routing erweitert werden kann, 
 eignet es sich sehr gut als Basismechanismus.
-Nachfolgend soll nun diese Erweiterung beschieben werden.
+Die hierfür notwendigen Erweiterung werden nun nachfolgend beschieben.
+
+Bei reinem MPLS wählt der Router beim Eintreffen eines Paketes anhand dessen Label das zu verwendende Interface, 
+über das das Paket weitergeleitet werden soll.
+Dazu führt der Router eine Datenstruktur in Form einer Tabel, 
+die für jedes Label eine entsprechende "next-hop label forwarding instruction (NHLFE)" enthält. 
+Da für jedes Label nur ein Eintrag vorhanden ist, 
+wird der gesammt Verkehr der mit demselben Lable gekennzeichnet ist auch immer über dasselbe Interface geroutet.
+Um nun eine flussbasiertes Routing mit MPLS zu ermöglichen muss MPLS so erweitert werden, 
+dass der zu einem Label gehörende Datenverkehr anteilig auf mehrer Interfaces verteilt  werden kann.
+MPLS-ff erweitert dazu die Datenstruktur so, 
+dass sie mehrere NHLFE Einträge enthalten kann. 
+Außerdem wird jedem NHLFE Eintrag ein Faktor (next-hop splitting ratio) zugeordnet, 
+anhand dessen der Router die Pakete auf die, 
+diesem Label zugeordneten Interfaces aufteilen kann. 
+
+%TODO Wie wird die next-hop Splitting Ratio implementiert?
+%TODO Bessere Erklärung für Protection Routing p.
+%TODO Refernz zu FEhlererkennung auf Schicht 2 einfügen
+Mithilfe der Erweiterung MPLS-ff kann nun R3 implementiert werden.
+Die Vorberechnung des \textit{Protection Routings p} und die Einrichtung von MPLS-ff kann von einem zentralen Server erledigt werden.
+Die Rekonfiguration während des Betriebes kann von jedem Router selbst übernommen werden.
+Zu Fehlererkennung während des Betriebs kann die Sicherungsschicht (Layer 2) auf Fehlerereignisse beobachtet werden. 
+Auch andere Fehlererkennungsverfahren wie z.B \cite{KYGS05} sind möglich.
+
+
+
 
 
 
